# nostr_bots

./: .gitattributes  LICENSE.txt  README.md  bitcoind_bot.py  pyproject.toml  run_bitcoin_bot.py  run_echo_bot.py  run_ip_bot.py  util.py
.github/workflows/: python-package.yml
bots/: basic.py  bitcoind.py  echo.py
src/bots/: __about__.py  basic.py  bitcoind.py
src/nostr_bots/: __about__.py  __init__.py  acceptors.py  basic.py  run_bitcoin_bot.py  run_echo_bot.py  run_ip_bot.py
web/html/: address.html  list_transactions.html
web/script/: bot.js  nostr.js
