[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bots"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "monty", email = "monty@monty888.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "monstr>=0.1.2"
]

[project.urls]
Documentation = "https://github.com/monty/bots#readme"
Issues = "https://github.com/monty/bots/issues"
Source = "https://github.com/monty/bots"

[tool.hatch.version]
path = "src/bots/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/bots tests}"

[tool.coverage.run]
source_pkgs = ["bots", "tests"]
branch = true
parallel = true
omit = [
  "src/bots/__about__.py",
]

[tool.coverage.paths]
bots = ["src/bots", "*/bots/src/bots"]
tests = ["tests", "*/bots/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
